--- a/vsl.html
+++ b/vsl.html
@@ -24,6 +24,11 @@
 		"@type": "Organization",
 		"name": "Vitalwellness365"
 }</script>
+	<script>
+    setTimeout(function() {
+        document.getElementById('elemento').style.display = 'none';
+    }, 20000); // 60000 milissegundos = 1 minuto
+</script>
     <meta name="theme-color" content="#834496">
     <meta property="og:title" content="(1) Free Presentation">
     <meta property="og:description" content="">
@@ -32,9 +37,10 @@
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="ena">
     <section class="u-clearfix u-custom-color-2 u-section-1" id="sec-a5ba">
       <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
-        <h1 class="u-align-center u-text u-text-1">
+      <div id="elemento">  <h1 class="u-align-center u-text u-text-1">
           <span class="u-text-palette-5-base"> Unknown</span> Himalayan Tradition <span class="u-text-palette-5-base">FIXES</span> Type 2 Diabetes <span class="u-text-palette-5-base">Fast</span>
         </h1>
+      </div>
         <div class="custom-expanded u-clearfix u-custom-html u-expanded-width-sm u-custom-html-1">
           <center>
             <div id="ifr_668027d658521d000b18adc0_wrapper" style="margin: 0 auto; width: 100%">
