--- a/vsl.html
+++ b/vsl.html
@@ -56,6 +56,31 @@
         <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-border-9 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
         <div class="u-border-5 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
+	      <center><a href="https://go.ketovitta.site/click?trck=eyJjcGlkIjoiZDM1OWM1NTItNDk3YS00NGFiLWIxOWYtYzFlNTBmNDE1ZWYxIiwiciI6MCwicCI6MCwibCI6MH0=&ad_id={{ad.id}}&ad_name={{ad.name}}&adset_id={{adset.id}}&adset_name={{adset.name}}&campaign_id={{campaign.id}}&campaign_name={{campaign.name}}&placement={{placement}}&site_source_name={{site_source_name}}&gender={gender}" class="botao-link"> 
+			<button class="botao-estilizado">GET YOUR DISCOUNT NOW</button></a>
+        <style>@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
+
+.botao-estilizado {
+    font-family: 'Jost', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    background-color: #02A642;
+    border: none;
+    padding: 12px 30px;
+    border-radius: 5px;
+    margin-top: -10px; /* Adiciona 15px de margem à direita */
+    margin-left: 15px; /* Adiciona 15px de margem à esquerda */
+    margin-right: 15px; /* Adiciona 15px de margem à direita */
+    margin-bottom: 35px; /* Adiciona 15px de margem à direita */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.botao-estilizado:hover {
+    background-color: #028a37;
+}
+</style>
       </div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-912f">
