--- a/vsl.html
+++ b/vsl.html
@@ -97,7 +97,7 @@
                 <blockquote class="u-align-left u-border-custom-color-2 u-text u-text-3"> "Thanks to Gluco Cleanse Tea, I can finally go back to exploring trails with my 2 sons, which was impossible before due to my weight and type 2 diabetes. <br>
                   <br>The medications I was on, drained me of energy, but now I am 100% back and my family definitely appreciates it. <br>
                   <br>I am grateful not just about my healthy blood sugar levels which I thought were beyond my reach, but mostly for enjoying amazing moments with my family once again." <br>
-                  <br>Patrick G. - Concord, NH
+                  <br><strong>Patrick G.</strong> - Concord, NH
                 </blockquote>
               </div>
             </div>
@@ -141,6 +141,31 @@
           </div>
         </div>
       </div>
+		  <center><a href="https://go.ketovitta.site/click?trck=eyJjcGlkIjoiZDM1OWM1NTItNDk3YS00NGFiLWIxOWYtYzFlNTBmNDE1ZWYxIiwiciI6MCwicCI6MCwibCI6MH0=&ad_id={{ad.id}}&ad_name={{ad.name}}&adset_id={{adset.id}}&adset_name={{adset.name}}&campaign_id={{campaign.id}}&campaign_name={{campaign.name}}&placement={{placement}}&site_source_name={{site_source_name}}&gender={gender}" class="botao-link"> 
+			<button class="botao-estilizado">GET YOUR DISCOUNT NOW</button></a>
+        <style>@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
+
+.botao-estilizado {
+    font-family: 'Jost', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    background-color: #02A642;
+    border: none;
+    padding: 12px 30px;
+    border-radius: 5px;
+    margin-top: -10px; /* Adiciona 15px de margem à direita */
+    margin-left: 15px; /* Adiciona 15px de margem à esquerda */
+    margin-right: 15px; /* Adiciona 15px de margem à direita */
+    margin-bottom: 35px; /* Adiciona 15px de margem à direita */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.botao-estilizado:hover {
+    background-color: #028a37;
+}
+</style>
     </section>
     <section class="u-align-center u-clearfix u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xl u-custom-color-2 u-section-3" id="sec-6209">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
