--- a/vsl.html
+++ b/vsl.html
@@ -109,7 +109,7 @@
                 <blockquote class="u-align-left u-border-custom-color-2 u-text u-text-5">"Since starting Gluco Cleanse Tea, my blood sugar levels have finally stabilized, and I'm thrilled to be back in my favorite clothes that haven't fit for years. <br>
                   <br>On top of that, every morning, I wake up feeling energized and refreshed, ready for an amazing new day! <br>
                   <br>For anyone struggling with high blood sugar and extra weight, I'd definitely recommend giving Gluco Cleanse Tea a shot!" <br>
-                  <br>Patricia G. - NEW YORK, NY 
+                  <br><strong>Patricia G.</strong> - NEW YORK, NY 
                 </blockquote>
               </div>
             </div>
@@ -122,7 +122,7 @@
                   <br>My wife also struggled with her high blood sugar levels, and after a fight we had due to another week of failed dieting, we decided to try something new. <br>
                   <br>That's when we discovered Gluco Cleanse Tea on Facebook. In just a few weeks, not only did our blood sugar levels drop significantly, but we both started losing weight without any dieting. <br>
                   <br>Gluco Cleanse tea has made a huge difference in our lives so we're definitely sticking with it!" <br>
-                  <br>Michael  S. - Arden, NC 
+                  <br><strong>Michael  S.</strong> - Arden, NC 
                 </blockquote>
               </div>
             </div>
@@ -134,7 +134,7 @@
                 <blockquote class="u-align-left u-border-custom-color-2 u-text u-text-9"> "Turning 49 and facing pre-diabetes was a wake-up call for me. As an accountant with a sedentary lifestyle, I was shocked to see my blood sugar always over 200, even though I was not eating any sugar or carbs. <br>
                   <br>Since the pills my doctor prescribed didn't help, thanks God I found Gluco Cleanse Tea on google and gave it a try. To my astonishment, not only did my blood sugar levels stabilize at 100, but I also started shedding weight. <br>
                   <br>Fast forward six months, and I'm over 50 pounds lighter! My energy levels have skyrocketed, and I no longer fall into the 'at-risk' category for diabetes. Gluco Cleanse Tea is a lifesaver!" <br>
-                  <br>John J. - Austin, TX
+                  <br><strong>John J.</strong> - Austin, TX
                 </blockquote>
               </div>
             </div>
@@ -190,8 +190,8 @@
                   <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-container-layout-2">
                       <h4 class="u-text u-text-2">
-                        <span style="font-weight: 700;">S</span>
-                        <span style="font-weight: 700;">LIM OVER 55</span> is an easy fitness program especially created for men and women who are beginners at working out, are at least 15 pounds overweight, and want to get back in shape by doing easy exercises at home!<br>
+                      
+                        <span style="font-weight: 700;">SLIM OVER 55</span> is an easy fitness program especially created for men and women who are beginners at working out, are at least 15 pounds overweight, and want to get back in shape by doing easy exercises at home!<br>
                         <br>This easy program already worked great for thousands of people who are between 40 and 77 years of age, so <span style="font-weight: 700;">you will love it</span> because it will speed up your progress and help you balance your blood sugar.
                       </h4>
                     </div>
