--- a/vsl.html
+++ b/vsl.html
@@ -56,7 +56,11 @@
         <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-border-9 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
         <div class="u-border-5 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
-	      <center><a href="https://go.ketovitta.site/click?trck=eyJjcGlkIjoiZDM1OWM1NTItNDk3YS00NGFiLWIxOWYtYzFlNTBmNDE1ZWYxIiwiciI6MCwicCI6MCwibCI6MH0=&ad_id={{ad.id}}&ad_name={{ad.name}}&adset_id={{adset.id}}&adset_name={{adset.name}}&campaign_id={{campaign.id}}&campaign_name={{campaign.name}}&placement={{placement}}&site_source_name={{site_source_name}}&gender={gender}" class="botao-link"> 
+	      
+      </div>
+    </section>
+    <section class="u-clearfix u-section-2" id="sec-912f">
+	    <center><a href="https://go.ketovitta.site/click?trck=eyJjcGlkIjoiZDM1OWM1NTItNDk3YS00NGFiLWIxOWYtYzFlNTBmNDE1ZWYxIiwiciI6MCwicCI6MCwibCI6MH0=&ad_id={{ad.id}}&ad_name={{ad.name}}&adset_id={{adset.id}}&adset_name={{adset.name}}&campaign_id={{campaign.id}}&campaign_name={{campaign.name}}&placement={{placement}}&site_source_name={{site_source_name}}&gender={gender}" class="botao-link"> 
 			<button class="botao-estilizado">GET YOUR DISCOUNT NOW</button></a>
         <style>@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
 
@@ -81,9 +85,8 @@
     background-color: #028a37;
 }
 </style>
-      </div>
-    </section>
-    <section class="u-clearfix u-section-2" id="sec-912f">
+	
+	</center>
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h2 class="u-align-center u-text u-text-custom-color-2 u-text-default-xl u-text-font u-text-1"> Meet A Few Of Our Clients And Their Amazing <u>Life-Changing Results.</u>
         </h2>
