--- a/vsl.html
+++ b/vsl.html
@@ -52,15 +52,16 @@
           </center>
         </div>
         <h3 class="u-align-center u-text u-text-2">AS FEATURED IN </h3>
-        <img class="custom-expanded u-image u-image-contain u-image-default u-image-1" src="images/unnamed.png" alt="" data-image-width="1684" data-image-height="313">
+       <div id="elemento2">   <img class="custom-expanded u-image u-image-contain u-image-default u-image-1" src="images/unnamed.png" alt="" data-image-width="1684" data-image-height="313"> </div>
         <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-border-9 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
         <div class="u-border-5 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
-	      
-      </div>
-    </section>
-    <section class="u-clearfix u-section-2" id="sec-912f">
-	    <center><a href="https://go.ketovitta.site/click?trck=eyJjcGlkIjoiZDM1OWM1NTItNDk3YS00NGFiLWIxOWYtYzFlNTBmNDE1ZWYxIiwiciI6MCwicCI6MCwibCI6MH0=&ad_id={{ad.id}}&ad_name={{ad.name}}&adset_id={{adset.id}}&adset_name={{adset.name}}&campaign_id={{campaign.id}}&campaign_name={{campaign.name}}&placement={{placement}}&site_source_name={{site_source_name}}&gender={gender}" class="botao-link"> 
+	<script>
+    setTimeout(function() {
+        document.getElementById('elemento2').style.display = 'none';
+    }, 10000); // 60000 milissegundos = 1 minuto
+</script>
+	      <center><a href="https://go.ketovitta.site/click?trck=eyJjcGlkIjoiZDM1OWM1NTItNDk3YS00NGFiLWIxOWYtYzFlNTBmNDE1ZWYxIiwiciI6MCwicCI6MCwibCI6MH0=&ad_id={{ad.id}}&ad_name={{ad.name}}&adset_id={{adset.id}}&adset_name={{adset.name}}&campaign_id={{campaign.id}}&campaign_name={{campaign.name}}&placement={{placement}}&site_source_name={{site_source_name}}&gender={gender}" class="botao-link"> 
 			<button class="botao-estilizado">GET YOUR DISCOUNT NOW</button></a>
         <style>@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap');
 
@@ -86,7 +87,11 @@
 }
 </style>
 	
-	</center>
+	</center>     
+      </div>
+    </section>
+    <section class="u-clearfix u-section-2" id="sec-912f">
+	   
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h2 class="u-align-center u-text u-text-custom-color-2 u-text-default-xl u-text-font u-text-1"> Meet A Few Of Our Clients And Their Amazing <u>Life-Changing Results.</u>
         </h2>
