--- a/vsl.html
+++ b/vsl.html
@@ -51,8 +51,8 @@
             <style> .elementor-element:has(#ifr_668027d658521d000b18adc0_wrapper) { width: 100%; } </style>
           </center>
         </div>
-        <h3 class="u-align-center u-text u-text-2">AS FEATURED IN </h3>
-       <div id="elemento2">   <img class="custom-expanded u-image u-image-contain u-image-default u-image-1" src="images/unnamed.png" alt="" data-image-width="1684" data-image-height="313"> </div>
+       <div id="elemento2">   <h3 class="u-align-center u-text u-text-2">AS FEATURED IN </h3>
+       <img class="custom-expanded u-image u-image-contain u-image-default u-image-1" src="images/unnamed.png" alt="" data-image-width="1684" data-image-height="313"> </div>
         <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-border-9 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
         <div class="u-border-5 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
